@@ -1,7 +1,8 @@
 Changes for Labyrinth-Plugin-Album
 ==================================
 
-        - added functional tests for View, Random & Gallery methods. (Photos)
+        - added functional tests for View, Random, Gallery & Albums methods.
+          (Photos)
 
 1.10	2015-03-14
         - bugfix, don't save non-existent metadata!
